force-app/main/default/objects/Subsidy_Information__c/Subsidy_Information__c.object-meta.xml
<CustomObject>
    <label>Subsidy Information</label>
    <nameField>
        <displayFormat>SUBIN-{00000}</displayFormat>
        <label>Subsidy Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subsidy Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>