force-app/main/default/objects/Subsidy_Information__c/fields/Eligible_Monthly_Income_For_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Monthly_Income_For_Subsidy__c</fullName>
    <formula>((30/100)*Household_Income__c)/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on 30% of Annual Household Income divided by 12.</inlineHelpText>
    <label>Tenant Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>