force-app/main/default/objects/Subsidy_Information__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subsidy Informations</relationshipLabel>
    <relationshipName>Subsidy_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>