force-app/main/default/objects/Subsidy_Information__c/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <label>Annual Household Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>