force-app/main/default/objects/Subsidy_Information__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Subsidy Informations</relationshipLabel>
    <relationshipName>Subsidy_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>