force-app/main/default/objects/Subsidy_Information__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Subsidy Informations</relationshipLabel>
    <relationshipName>Subsidy_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>